# workflow-rs

./: .gitignore  Cargo.toml  README.md  check  test
.github/workflows/: ci.yaml
ai/: Cargo.toml
ai/src/: error.rs  gpt.rs  imports.rs  lib.rs
chrome/: Cargo.toml
chrome/src/: error.rs  lib.rs  storage.rs
core/: .gitignore  Cargo.toml  README.md  build.rs
core/macros/: Cargo.toml  README.md
core/macros/src/: async-trait.rs  attribute_cleaner.rs  enums.rs  lib.rs  seal.rs  send.rs
core/src/: abortable.rs  channel.rs  dirs.rs  enums.rs  env.rs  executor.rs  fd.rs  hex.rs  id.rs  lib.rs  lookup.rs  prelude.rs  runtime.rs  sendable.rs  sleep.rs  task.rs  time.rs  timeout.rs  trigger.rs  utils.rs  version.rs
core/src/extensions/: is_not_empty.rs
core/src/native/: interval.rs  mod.rs  overrides.rs
core/src/traits/: is_not_empty.rs  mod.rs
core/src/wasm/: interval.rs  mod.rs  overrides.rs  sleep.rs  yield_executor.rs
core/test/: build-wasm
d3/: Cargo.toml
d3/src/: container.css  container.rs  error.rs  graph.css  graph.rs  imports.rs  lib.rs  script.rs
dom/: Cargo.toml  README.md
dom/src/: clipboard.rs  download.rs  error.rs  inject.rs  lib.rs  link.rs  loader.rs  result.rs  utils.rs
egui/: Cargo.toml  README.md
egui/macros/: Cargo.toml
egui/macros/src/: lib.rs  register.rs
egui/src/: device.rs  error.rs  fonts.rs  imports.rs  lib.rs  prelude.rs
egui/src/frame/: app.rs  core.rs  mod.rs  options.rs
egui/src/module/: manager.rs  mod.rs  module.rs
egui/src/runtime/: channel.rs  events.rs  mod.rs  panic.rs  payload.rs  repaint.rs  runtime.rs  service.rs  signals.rs
encryption/: Cargo.toml
encryption/src/: chacha20poly1305.rs  error.rs  hash.rs  imports.rs  lib.rs  secret.rs
examples/rpc/: README.md
examples/rpc/client-browser/wasm/: Cargo.toml  index.html
examples/rpc/client-common/: Cargo.toml
examples/rpc/client-common/src/: lib.rs
examples/rpc/client-native/: Cargo.toml
examples/rpc/client-native/src/: main.rs
examples/rpc/messages/: Cargo.toml
examples/rpc/messages/src/: lib.rs
examples/rpc/server/: Cargo.toml
examples/rpc/server/src/: main.rs  server.rs
examples/terminal/: .gitignore  README.md
examples/terminal/cli/: Cargo.toml
examples/terminal/cli/src/: lib.rs
examples/terminal/native/: Cargo.toml
examples/terminal/native/src/: main.rs
examples/terminal/wasm/: Cargo.toml  build
examples/terminal/wasm/root/: index.html
examples/terminal/wasm/src/: lib.rs
examples/websocket/: README.md
examples/websocket/client-browser/: .gitignore
examples/websocket/client-common/: Cargo.toml
examples/websocket/client-native/: Cargo.toml
examples/websocket/server/: Cargo.toml
gpt/: Cargo.toml
gpt/src/: lib.rs
html/: Cargo.toml  README.md
html/macros/: Cargo.toml
html/macros/src/: attributes.rs  element.rs  lib.rs  state.rs
html/src/: escape.rs  interface.rs  lib.rs  render.rs  utils.rs
http/: Cargo.toml  README.md
http/src/: error.rs  lib.rs  native.rs  wasm.rs
i18n/: Cargo.toml  README.md
i18n/src/: error.rs  i18n.rs  json.rs  lib.rs
log/: Cargo.toml  README.md
log/src/: console.rs  levels.rs  lib.rs  log.rs
macro-tools/: Cargo.toml  README.md
macro-tools/src/: attributes.rs  lib.rs
node/: .gitignore  Cargo.toml  README.md
node/src/: child_process.rs  error.rs  fs.rs  lib.rs  process.rs  require.rs  result.rs
nw/: .gitignore  Cargo.toml  README.md
nw/src/: application.rs  error.rs  global.rs  ipc.rs  lib.rs  media.rs  menu.rs  prelude.rs  shortcut.rs  tray.rs  window.rs
nw/src/ipc/: error.rs  id.rs  imports.rs  ipc.rs  messages.rs  method.rs  mod.rs  notification.rs  result.rs  target.rs  types.rs
panic-hook/: Cargo.toml  README.md
panic-hook/src/: lib.rs  logger.rs
rpc/: Cargo.toml  README.md
rpc/macros/: Cargo.toml
rpc/macros/src/: lib.rs  method.rs
rpc/src/: encoding.rs  error.rs  id.rs  imports.rs  lib.rs  messages.rs  result.rs  types.rs
rpc/src/client/: error.rs  mod.rs  prelude.rs  result.rs
rpc/src/client/interface/: mod.rs  notification.rs
rpc/src/client/protocol/: borsh.rs  mod.rs  serde_json.rs
rpc/src/server/: error.rs  mod.rs  prelude.rs  result.rs
rpc/src/server/interface/: method.rs  mod.rs  notification.rs
rpc/src/server/protocol/: borsh.rs  mod.rs  serde_json.rs
rs/: Cargo.toml
rs/src/: lib.rs
serializer/: Cargo.toml
serializer/src/: lib.rs  macros.rs  payload.rs  result.rs  serializer.rs  tests.rs
service/: Cargo.toml
service/src/: debug.rs  error.rs  imports.rs  lib.rs  prelude.rs  runtime.rs  service.rs  signals.rs
store/: Cargo.toml  README.md
store/src/: error.rs  fs.rs  lib.rs  prelude.rs  result.rs  store.rs
task/: Cargo.toml  README.md
task/macros/: Cargo.toml
task/macros/src/: lib.rs  task.rs
task/src/: lib.rs
terminal/: .gitignore  Cargo.toml  README.md
terminal/macros/: Cargo.toml  README.md
terminal/macros/src/: handlers.rs  lib.rs  register.rs
terminal/src/: clear.rs  cli.rs  crlf.rs  cursor.rs  error.rs  keys.rs  lib.rs  macros.rs  prelude.rs  result.rs  unicode.rs
terminal/src/terminal/: bindings.rs  crossterm.rs  mod.rs  options.rs  termion.rs  xterm.rs
utils/: Cargo.toml
utils/src/: action.rs  arglist.rs  error.rs  format.rs  imports.rs  ip.rs  lib.rs  result.rs  version.rs
wasm/: .gitignore  Cargo.toml  README.md
wasm/macros/: Cargo.toml
wasm/macros/src/: callback.rs  derive_cast_from_js.rs  derive_try_from_jsvalue.rs  derive_try_from_jsvalue_v1.rs  lib.rs  ref_from_abi.rs  sendable.rs
wasm/src/: abi.rs  callback.rs  channel.rs  convert.rs  error.rs  init.rs  jserror.rs  jsvalue.rs  lib.rs  object.rs  options.rs  panic.rs  prelude.rs  printable.rs  promise.rs  result.rs  sendable.rs  serde.rs  stream.rs  timers.rs  tovalue.rs  utils.rs
wasm/src/extensions/: jsvalue.rs  mod.rs  object.rs
websocket/: Cargo.toml  README.md
websocket/src/: lib.rs  test.rs
websocket/src/client/: bindings.rs  config.rs  error.rs  message.rs  mod.rs  native.rs  options.rs  result.rs  ts_types.rs  wasm.rs  websocket.rs
websocket/src/server/: error.rs  mod.rs  result.rs
(+8 files in other folders)
