[workspace]
resolver = "2"
members = [
    "core",
    "core/macros",
    "d3",
    "dom",
    "features",
    "html",
    "html/macros",
    "i18n",
    "log",
    "macro-tools",
    "node",
    "nw",
    "panic-hook",
    "rpc",
    "rpc/macros",
    "store",
    "task",
    "task/macros",
    "terminal",
    "terminal/macros",
    "wasm",
    "wasm/macros",
    "websocket",
    "examples/rpc/client-browser/wasm",
    "examples/rpc/client-native",
    "examples/rpc/client-common",
    "examples/rpc/messages",
    "examples/rpc/server",
    "examples/websocket/client-browser/wasm",
    "examples/websocket/client-common",
    "examples/websocket/client-native",
    "examples/websocket/server",
    "examples/terminal/cli",
    "examples/terminal/native",
    "examples/terminal/wasm",
]

[workspace.package]
version = "0.7.0"
authors = ["Anton Yemelyanov <anton.yemelyanov@gmail.com>", "Surinder Singh Matoo Mattaur <surinder83singh@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
include = ["src/**/*.rs", "Cargo.toml"]
repository = "https://github.com/workflow-rs/workflow-rs"

[workspace.dependencies]

# internal dependencies

workflow-core = { version = "0.7.0", path = "core" }
workflow-core-macros = { version = "0.7.0", path = "core/macros" }
workflow-d3 = { version = "0.7.0", path = "d3" }
workflow-dom = { version = "0.7.0", path = "dom" }
workflow-html = { version = "0.7.0", path = "html" }
workflow-html-macros = { version = "0.7.0", path = "html/macros" }
workflow-i18n = { version = "0.7.0", path = "i18n" }
workflow-log = { version = "0.7.0", path = "log" }
workflow-macro-tools = { version = "0.7.0", path = "macro-tools" }
workflow-node = { version = "0.7.0", path = "node" }
workflow-nw = { version = "0.7.0", path = "nw" }
workflow-panic-hook = { version = "0.7.0", path = "panic-hook" }
workflow-rpc = { version = "0.7.0", path = "rpc" }
workflow-rpc-macros = { version = "0.7.0", path = "rpc/macros" }
workflow-rs = { version = "0.7.0", path = "features" }
workflow-store = { version = "0.7.0", path = "store" }
workflow-task = { version = "0.7.0", path = "task" }
workflow-task-macros = { version = "0.7.0", path = "task/macros" }
workflow-terminal = { version = "0.7.0", path = "terminal" }
workflow-terminal-macros = { version = "0.7.0", path = "terminal/macros" }
workflow-wasm = { version = "0.7.0", path = "wasm" }
workflow-wasm-macros = { version = "0.7.0", path = "wasm/macros" }
workflow-websocket = { version = "0.7.0", path = "websocket" }

# external dependencies

ahash = "0.8.3"
async-channel = "1.9.0"
async-std = { version = "1.12.0", features = ['attributes'] }
async-trait = "0.1.73"
atomic_float = "0.1.0"
base64 = "0.21.2"
# borsh = { version = "0.10.0", features = ["rc"] }
borsh = { version = "0.9.1", features = ["rc"] }
bs58 = "0.5.0"
cfg-if = "1.0.0"
console = "0.15.7"
convert_case = "0.6.0"
crossterm = "0.27.0"
clap = { version = "4.3.23", features = ["derive","cargo"] }
downcast = "0.11.0"
downcast-rs = "1.2.0"
dirs = "5.0.1"
faster-hex = "0.8.0"
futures = "0.3.28"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
getrandom = {version = "0.2.10", features=["js"]}
hexplay = "0.3.0"
home = "0.5.5"
instant = { version ="0.1.12", features = ['wasm-bindgen'] }
js-sys = "0.3.64"
lazy_static = "1.4.0"
log = "0.4.20"
manual_future = "0.1.1"
node-child-process = "0.1.1"
node-sys = "0.4.2"
numtoa = "0.2.4"
# nw-sys= { path = "../nw-sys" }
nw-sys = { version = "0.1.6" }
pad = "0.1.6"
parse-variants = "1.0.1"
proc-macro-error = { version = "1.0.4", default-features = false }
proc-macro2 = { version = "1.0.50" }
quote = "1.0.23"
rand = { version = "0.8.5", features = ["getrandom"] }
regex = "1.9.3"
ritehash = "0.2.0"
serde = { version = "1.0.171" , features = ["derive","rc"] }
serde_json = "1.0.105"
serde-wasm-bindgen = "0.5.0"
sha2 = "0.10.7"
syn = {version="1.0.107",features=["full","fold","extra-traits","parsing","proc-macro"]}
termcolor="1.2.0"
termion = "2.0.1"
textwrap = "0.16.0"
# termion = "1.5.6"
thiserror = "1.0.47"
tokio = { version = "1.32.0", default-features = false, features = ['io-util','time','sync','macros','rt','rt-multi-thread'] }
tokio-tungstenite = { version = "0.20.0", features = ["handshake"] }
triggered = "0.1.2"
tungstenite = { version = "0.20.0", features = ["handshake"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"
workflow-async-trait = "0.1.68"
chrome-sys = {path = "../chrome-sys"}
