[workspace]
resolver = "2"
members = [
    "chrome",
    "core",
    "core/macros",
    "d3",
    "dom",
    "features",
    "gpt",
    "html",
    "html/macros",
    "http",
    "i18n",
    "log",
    "macro-tools",
    "node",
    "nw",
    "panic-hook",
    "rpc",
    "rpc/macros",
    "serializer",
    "store",
    "task",
    "task/macros",
    "terminal",
    "terminal/macros",
    "wasm",
    "wasm/macros",
    "websocket",
    "examples/rpc/client-browser/wasm",
    "examples/rpc/client-native",
    "examples/rpc/client-common",
    "examples/rpc/messages",
    "examples/rpc/server",
    "examples/websocket/client-browser/wasm",
    "examples/websocket/client-common",
    "examples/websocket/client-native",
    "examples/websocket/server",
    "examples/terminal/cli",
    "examples/terminal/native",
    "examples/terminal/wasm", 
]

[workspace.package]
version = "0.13.1"
authors = ["Anton Yemelyanov <anton.yemelyanov@gmail.com>", "Surinder Singh Matoo Mattaur <surinder83singh@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
include = ["src/**/*.rs", "Cargo.toml"]
repository = "https://github.com/workflow-rs/workflow-rs"

[workspace.dependencies]

# internal dependencies

workflow-chrome = { version = "0.13.1", path = "chrome" }
workflow-core = { version = "0.13.1", path = "core" }
workflow-core-macros = { version = "0.13.1", path = "core/macros" }
workflow-d3 = { version = "0.13.1", path = "d3" }
workflow-dom = { version = "0.13.1", path = "dom" }
workflow-gpt = { version = "0.13.1", path = "gpt" }
workflow-html = { version = "0.13.1", path = "html" }
workflow-html-macros = { version = "0.13.1", path = "html/macros" }
workflow-http = { version = "0.13.1", path = "http" }
workflow-i18n = { version = "0.13.1", path = "i18n" }
workflow-log = { version = "0.13.1", path = "log" }
workflow-macro-tools = { version = "0.13.1", path = "macro-tools" }
workflow-node = { version = "0.13.1", path = "node" }
workflow-nw = { version = "0.13.1", path = "nw" }
workflow-panic-hook = { version = "0.13.1", path = "panic-hook" }
workflow-rpc = { version = "0.13.1", path = "rpc" }
workflow-rpc-macros = { version = "0.13.1", path = "rpc/macros" }
workflow-rs = { version = "0.13.1", path = "features" }
workflow-store = { version = "0.13.1", path = "store" }
workflow-serializer = { version = "0.13.1", path = "serializer" }
workflow-task = { version = "0.13.1", path = "task" }
workflow-task-macros = { version = "0.13.1", path = "task/macros" }
workflow-terminal = { version = "0.13.1", path = "terminal" }
workflow-terminal-macros = { version = "0.13.1", path = "terminal/macros" }
workflow-wasm = { version = "0.13.1", path = "wasm" }
workflow-wasm-macros = { version = "0.13.1", path = "wasm/macros" }
workflow-websocket = { version = "0.13.1", path = "websocket" }

# external dependencies

ahash = "0.8.6"
arc-swap = "1.6.0"
async-channel = "2.0.0"
async-std = { version = "1.12.0", features = ['attributes'] }
async-trait = "0.1.74"
atomic_float = "0.1.0"
base64 = "0.21.5"
borsh = { version = "1.5.1", features = ["derive", "rc"] }
bs58 = "0.5.0"
cfg-if = "1.0.0"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive","cargo"] }
console = "0.15.7"
convert_case = "0.6.0"
crossterm = "0.27.0"
dirs = "5.0.1"
downcast = "0.11.0"
downcast-rs = "1.2.0"
faster-hex = "0.9.0"
filetime = "0.2.22"
futures = "0.3.29"
futures-util = { version = "0.3.29", default-features = false, features = ["sink", "std"] }
getrandom = {version = "0.2.10", features=["js"]}
hexplay = "0.3.0"
home = "0.5.5"
instant = { version ="0.1.12", features = ['wasm-bindgen'] }
itertools = "0.12.1"
js-sys = "0.3.64"
lazy_static = "1.4.0"
log = "0.4.20"
manual_future = "0.1.1"
node-child-process = "0.1.1"
node-sys = "0.4.2"
numtoa = "0.2.4"
# nw-sys= { path = "../nw-sys" }
nw-sys = { version = "0.1.6" }
pad = "0.1.6"
parse-variants = "1.0.1"
proc-macro-error = { version = "1.0.4", default-features = false }
proc-macro2 = { version = "1.0.50" }
quote = "1.0.23"
rand = { version = "0.8.5", features = ["getrandom"] }
regex = "1.10.2"
reqwest = { version = "0.12.4", features = ["json"] }
ritehash = "0.2.0"
serde = { version = "1.0.190" , features = ["derive","rc"] }
serde_json = "1.0.108"
serde-wasm-bindgen = "0.6.1"
sha2 = "0.10.8"
# syn = {version="2.0",features=["full","fold","extra-traits","parsing","proc-macro"]}
syn = {version="1.0.107",features=["full","fold","extra-traits","parsing","proc-macro"]}
termcolor="1.3.0"
termion = "2.0.1"
textwrap = "0.16.0"
# termion = "1.5.6"
thiserror = "1.0.50"
tokio = { version = "1.33.0", default-features = false, features = ['io-util','time','sync','macros','rt','rt-multi-thread'] }
tokio-tungstenite = { version = "0.21.0", features = ["handshake"] }
triggered = "0.1.2"
tungstenite = { version = "0.21.0", features = ["handshake"] }
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
web-sys = "0.3.67"
# chrome-sys = {path = "../chrome-sys"}
chrome-sys = { version = "0.2.0" }

[workspace.lints.clippy]
empty_docs = "allow"
