[package]
name = "workflow-ai"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true
repository.workspace = true

[dependencies]
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
workflow-core.workspace = true
