[package]
name = "workflow-core"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/workflow-rs/workflow-core"
keywords = ["wasm","browser","channel"]
categories = ["wasm"]
exclude = ["/.*", "/test","/macros"]
description = """
Utilities and curated re-exports for async rust native and browser development
"""

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
workflow-core-macros.workspace = true
cfg-if.workspace = true
borsh.workspace = true

[target.'cfg(not(target_os = "solana"))'.dependencies]
# getrandom = {version = "^0.2", features=["js"]}
async-std.workspace = true
bs58.workspace = true
futures.workspace = true
getrandom.workspace = true
instant.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
triggered.workspace = true

[target.'cfg(not(any(target_os = "solana", target_arch = "wasm32")))'.dependencies]
tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
