[package]
name = "workflow-core"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords = ["wasm","browser","channel"]
categories = ["wasm"]
exclude = ["/.*", "/test","/macros"]
description = """
Utilities and curated re-exports for async rust native and browser development
"""

[features]
version = []
default = ["version"]

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
borsh.workspace = true
cfg-if.workspace = true
wasm-bindgen.workspace = true
workflow-core-macros.workspace = true
workflow-log.workspace = true

[target.'cfg(not(target_os = "solana"))'.dependencies]
# getrandom = {version = "^0.2", features=["js"]}
async-channel.workspace = true
async-std.workspace = true
bs58.workspace = true
futures.workspace = true
getrandom.workspace = true
instant.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
triggered.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
serde-wasm-bindgen.workspace = true
dirs.workspace = true
faster-hex.workspace = true
# workflow-log.workspace = true

[target.'cfg(not(any(target_os = "solana", target_arch = "wasm32")))'.dependencies]
tokio.workspace = true
chrono.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
wasm-bindgen-futures.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'Window',
    'Navigator',
    'Worker',
    'Blob',
    'BlobPropertyBag',
    'Url',
    'MessageEvent',
]

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "git", "gitcl", "rustc", "cargo"] }
