[package]
name = "workflow-d3"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords = ["wasm","dom","d3","graph","visualization"]
categories = ["web-programming::http-client","wasm"]
exclude = ["/.*", "/test"]
description = """
D3 visualization API bindings and utilities
"""

[lib]
crate-type = ["cdylib","lib"]
doctest = false

[dependencies]
js-sys.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-dom.workspace = true
workflow-log.workspace = true
workflow-wasm.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'Element',
    'HtmlCanvasElement',
    'DomRect',
    'Window',
    'CanvasRenderingContext2d',
]
