[package]
name = "workflow-dom"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version= "0.3.2"
keywords = ["wasm","dom","inject","script","css"]
categories = ["web-programming::http-client","wasm"]
exclude = ["/.*", "/test"]
description = """
DOM injection utilities for run-time injection of JavaScript and CSS
"""

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
futures.workspace = true
js-sys.workspace = true
regex.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-wasm.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'Blob',
    'BlobPropertyBag',
    'CustomEvent',
    'Document',
    'Element',
    'HtmlCollection',
    'Location',
    'Node',
    'NodeList',
    'Url',
    'Window',
]

[dev-dependencies]
tokio.workspace = true
