[package]
name = "workflow-dom"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords = ["wasm","dom","inject","script","css"]
categories = ["web-programming::http-client","wasm"]
exclude = ["/.*", "/test"]
description = """
DOM injection utilities for run-time injection of JavaScript and CSS
"""

[lib]
crate-type = ["cdylib","lib"]
doctest = false

[dependencies]
futures.workspace = true
js-sys.workspace = true
regex.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-wasm.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'Blob',
    'BlobPropertyBag',
    'CustomEvent',
    'MouseEvent',
    'Document',
    'Element',
    'HtmlCollection',
    'Location',
    'Node',
    'NodeList',
    'Url',
    'Window',
]

[dev-dependencies]
tokio.workspace = true
