[package]
name = "workflow-egui"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords = ["egui","framework"]
categories = []
exclude = ["/.*", "/test","/macros"]
description = """
Components for EGUI-based applications
"""

[features]
# test = []
# version = []
console = []
default = []

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
egui.workspace = true
eframe.workspace = true

workflow-egui-macros.workspace = true

downcast-rs.workspace = true

ahash.workspace = true
safer_owning_ref.workspace = true
borsh.workspace = true
cfg-if.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-wasm.workspace = true
workflow-dom.workspace = true

async-channel.workspace = true
async-std.workspace = true
async-trait.workspace = true
futures.workspace = true
getrandom.workspace = true
instant.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
triggered.workspace = true
js-sys.workspace = true
serde-wasm-bindgen.workspace = true
dirs.workspace = true
log.workspace = true

[target.'cfg(not(any(target_arch = "bpf", target_arch = "wasm32")))'.dependencies]
tokio.workspace = true
chrono.workspace = true
ctrlc.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
wasm-bindgen-futures.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'VisibilityState',
]

[lints.clippy]
empty_docs = "allow"
