[package]
name = "workflow-gpt"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords = ["wasm","serialize","binary","borsh"]
categories = []
exclude = ["/.*", "/test"]
description = """
Utilities for interfacing with OpenAI ChatGPT.
"""

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
workflow-core.workspace = true
