[package]
name = "workflow-html"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/workflow-rs/workflow-html"
keywords = ["html","template"]
categories = ["web-programming::http-client","template-engine"]
exclude = ["/.*", "/test"]
description = """
HTML templating engine for run-time DOM injections
"""

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
lazy_static.workspace = true
regex.workspace = true
wasm-bindgen.workspace = true
workflow-html-macros.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'console',
    'Window',
    'Document',
    'Element',
    'Text',
    'HtmlCollection',
    'MouseEvent',
    'CustomEvent'
]
