[package]
name = "workflow-html"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords = ["html","template"]
categories = ["web-programming::http-client","template-engine"]
exclude = ["/.*", "/test"]
description = """
HTML templating engine for run-time DOM injections
"""

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
lazy_static.workspace = true
regex.workspace = true
wasm-bindgen.workspace = true
workflow-html-macros.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'console',
    'CustomEvent',
    'Document',
    'Element',
    'HtmlCollection',
    'MouseEvent',
    'Text',
    'Window',
]
