[package]
name = "workflow-i18n"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords = ["i18n","translation","language","internationalization"]
categories = ["internationalization"]
exclude = ["/.*", "/test"]
description = """
i18n layer for `workflow-rs` framework
"""

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
ritehash.workspace = true
thiserror.workspace = true
