[package]
name = "workflow-i18n"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords = ["i18n","translation","language","internationalization"]
categories = ["internationalization"]
exclude = ["/.*", "/test"]
description = """
i18n layer for `workflow-rs` framework
"""

[features]
thread-safe = []
default = []

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
cfg-if.workspace = true
ritehash.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
arc-swap.workspace = true
