[package]
name = "workflow-log"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/workflow-rs/workflow-log"
keywords = ["wasm","framework","log","logger","bpf"]
categories = []
exclude = ["/.*", "/test"]
description = """
Log macros & utilities abstracting native & in-browser logging interfaces
"""

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["sink"]
full = ["external-logger","sink","solana"]
sink = []
# ignored for BPF target
external-logger = []
solana=["dep:solana-program"]

[dependencies]
cfg-if.workspace = true
solana-program = {version = "1.14.13", optional = true}

[target.'cfg(not(target_os = "solana"))'.dependencies]
console.workspace = true
downcast.workspace = true
hexplay.workspace = true
lazy_static.workspace = true
log.workspace = true
termcolor.workspace = true
wasm-bindgen.workspace = true

#[target.'cfg(target_os = "solana")'.dependencies]
# solana-program = {path = "../solana/sdk/program"}
