[package]
name = "workflow-log"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords = ["wasm","framework","log","logger","bpf"]
categories = []
exclude = ["/.*", "/test"]
description = """
Log macros & utilities abstracting native & in-browser logging interfaces
"""

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[features]
default = ["sink"]
full = ["external-logger","sink","solana"]
sink = []
# ignored for BPF target
external-logger = []
solana=["dep:solana-program"]

[dependencies]
cfg-if.workspace = true
solana-program = { version = "1.15.0", optional = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
console.workspace = true
downcast.workspace = true
hexplay.workspace = true
lazy_static.workspace = true
log.workspace = true
termcolor.workspace = true
wasm-bindgen.workspace = true

# [target.'cfg(target_os = "solana")'.dependencies]
# solana-program = "0.15.0"
