[package]
name = "workflow-log"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords = ["wasm","framework","log","logger","bpf"]
categories = []
exclude = ["/.*", "/test"]
description = """
Log macros & utilities abstracting native & in-browser logging interfaces
"""

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[features]
default = ["sink"]
full = ["external-logger","sink"]
sink = []
external-logger = []

[dependencies]
cfg-if.workspace = true

[target.'cfg(not(target_arch = "bpf"))'.dependencies]
console.workspace = true
downcast.workspace = true
hexplay.workspace = true
lazy_static.workspace = true
log.workspace = true
termcolor.workspace = true
wasm-bindgen.workspace = true

[lints.clippy]
empty_docs = "allow"
