[package]
name = "workflow-macro-tools"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/workflow-rs/workflow-macro-tools"
keywords = ["macro","attributes"]
categories = []
exclude = ["/.*", "/test"]
description = """
Macro utility functions used by the Workflow-RS project
"""

[dependencies]
convert_case.workspace = true
parse-variants.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true


