[package]
name = "workflow-macro-tools"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version= "0.3.2"
keywords = ["macro","attributes"]
categories = []
exclude = ["/.*", "/test"]
description = """
Macro utility functions used by the `workflow-rs` framework
"""

[dependencies]
convert_case.workspace = true
parse-variants.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true


