[package]
name = "workflow-node"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/aspectron/node-child-process"
authors = ["Anton Yemelyanov <anton.yemelyanov@gmail.com>", "Surinder Singh Matoo Mattaur <surinder83singh@gmail.com>"]
keywords = ["node","nodejs"]
categories = ["wasm","api-bindings"]
description = """
Utilities and curated re-exports for Node.js APIs.
"""

[dependencies]
futures.workspace = true
js-sys.workspace = true
node-child-process.workspace = true
node-sys.workspace = true
thiserror.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-wasm.workspace = true

